# hass-becker-centronic-plus

./: .devcontainer.json  .gitignore  DEVELOPMENT.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml  validate.yml
config/: configuration.yaml
custom_components/becker_centronic_plus/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  cover.py  diagnostics.py  entity.py  manifest.json  polling_helper.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/becker_centronic_plus/translations/: de.json  en.json
scripts/: clear  develop  lint  setup
