[project]
name = "hass-becker-centronic-plus"
version = "0.0.0" # Version is managed in manifest.json only
requires-python = ">=3.14.2"

dependencies = [
    "pybeckerplus @ git+https://github.com/honsma235/pybeckerplus.git@v0.3.1",
]

# The ruff config is based on https://github.com/ludeeus/integration_blueprint/blob/main/.ruff.toml
[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = [ "ALL" ]
ignore = [
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "D203", # no-blank-line-before-class (incompatible with formatter)
    "D212", # multi-line-summary-first-line (incompatible with formatter)
    "COM812", # incompatible with formatter
    "ISC001", # incompatible with formatter
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.mccabe]
max-complexity = 25

[dependency-groups]
dev = [
    "aioesphomeapi>=45.3.1",
    "colorlog>=6.10.1",
    "homeassistant>=2026.5.4",
    "isal>=1.8.0",
    "ruff>=0.15.16",
    "uv>=0.5.29",
    "zlib-ng>=1.0.0",
]
